--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "image-webpack-loader": "^3.3.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
@@ -30,6 +32,7 @@
     "mysql": "^2.14.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-download-link": "^1.0.1",
     "react-draggable": "^2.2.6",
     "react-tilt": "^0.1.3"
   }
