--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^15.6.1",
     "react-download-link": "^1.0.1",
     "react-draggable": "^2.2.6",
-    "react-tilt": "^0.1.3"
+    "react-tilt": "^0.1.3",
+    "react-tooltip": "^3.3.0"
   }
 }
