--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build",
-    "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot --port 1234"
+    "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot --port 1234",
+    "postinstall": "webpack -p",
+    "startp": "node dist/app/server.js "
   },
   "keywords": [
     "react.js",
@@ -25,10 +27,12 @@
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.3.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "express": "^4.15.3",
     "mysql": "^2.14.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
